--- a/docs/pages/reference/helm-reference/teleport-kube-agent.mdx
+++ b/docs/pages/reference/helm-reference/teleport-kube-agent.mdx
@@ -51,25 +51,27 @@ list](#kubernetes-resources).
 
 The `teleport-kube-agent` chart deploys the following Kubernetes resources:
 
-| Kind                  | Default Name                                                             | Description                                                                                                                                                                                                                                                                                             | When Deployed                                                                                                     |
-|-----------------------|--------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|
-| `StatefulSet`         | The release name                                                         | Running a user-configured Teleport pod.                                                                                                                                                                                                                                                                 | Always.                                                                                                           |
-| `Secret`              | `joinTokenSecret.name` (default: `teleport-kube-agent-join-token`)       | Used for managing the state of the Teleport pod.                                                                                                                                                                                                                                              | `joinTokenSecret.secret` is `true`.                                                                                         |
-| `Secret`              | `jamfCredentialsSecret.name` (default: `teleport-jamf-api-credentials`)  | Used for integrating Jamf Prod with Teleport (`jamf_service`).                                                                                                                                                                                                                                               | `jamfCredentialsSecret.create` is `true`                                                                     |
-| `Deployment`          | The release name                                                         | Runs a user-configured Teleport pod.                                                                                                                                                                                                                                                                    | `storage.enabled` is `false` and the chart is being upgraded. Fresh installs will deploy a `StatefulSet` instead. |
-| `Role`                | The `roleName` option, if given, or the release name.                    | Used to manage the state of the Teleport pod via Kubernetes secrets.                                                                                                                                                                                                                                    | Always.                                                                                                           |
-| `ClusterRole`         | `clusterRoleName`, if given, or the release name.                        | Allows impersonating users, groups, and service accounts, getting pods, and creating [`SelfSubjectAccessReview`s](https://kubernetes.io/docs/reference/kubernetes-api/authorization-resources/self-subject-access-review-v1/) so the Teleport pod can manage access to resources in its Kubernetes cluster. | Always.                                                                                                       |
-| `ClusterRoleBinding`  | `clusterRoleBindingName`, if provided, or the release name               | Enables the Teleport pod to manage access to resources in the Kubernetes cluster.                                                                                                                                                                                                                       | Always.                                                                                                           |
-| `RoleBinding`         | `roleBindingName`, if given, or the release name                         | Enables the Teleport pod to manage access to resources in the Kubernetes cluster.                                                                                                                                                                                                                       | Always.                                                                                                           |
-| `ServiceAccount`      | `serviceAccount.name`, if given, or the release name                     | Enables the Teleport pod to manage access to resources in the Kubernetes cluster.                                                                                                                                                                                                                       | `serviceAccount.create` is `true`                                                                                 |
-| `PodDisruptionBudget` | The release name                                                         | Ensure high availability for the Teleport pod.                                                                                                                                                                                                                                                          | `highAvailability.podDisruptionBudget.enabled` is `true`.                                                         |
-| `ServiceAccount`      | The release name, suffixed by `-hook`                                    | Used to delete legacy `Deployment`s in order to deploy a `StatefulSet` instead. Removed once the upgrade is complete.                                                                                                                                                                                   | If the `teleport-kube-agent` release contains a legacy `Deployment` resource.                                     |
-| `Role`                | The release name, suffixed by `-hook`                                    | Used to delete legacy `Deployment`s in order to deploy a `StatefulSet` instead. Removed once the upgrade is complete.                                                                                                                                                                                   | If the `teleport-kube-agent` release contains a legacy `Deployment` resource.                                     |
-| `RoleBinding`         | The release name, suffixed by `-hook`                                    | Used to delete legacy `Deployment`s in order to deploy a `StatefulSet` instead. Removed once the upgrade is complete.                                                                                                                                                                                   | If the `teleport-kube-agent` release contains a legacy `Deployment` resource.                                     |
-| `Job`                 | The release name, suffixed by `-hook`                                    | Used to delete legacy `Deployment`s in order to deploy a `StatefulSet` instead. Removed once the upgrade is complete.                                                                                                                                                                                   | If the `teleport-kube-agent` release contains a legacy `Deployment` resource.                                     |
-| `ConfigMap`           | The release name                                                         | Contains the configuration for the Teleport pod.                                                                                                                                                                                                                                                        | Always.                                                                                                           |
-| `PodSecurityPolicy`   | The release name                                                         | Enforces security requirements for pods deployed by `teleport-kube-agent`.                                                                                                                                                                                                                              | `podSecurityPolicy.enabled` is `true` and the Kubernetes cluster version is < 1.23.                               |
-| `Role`                | The release name, suffixed by `-psp`                                     | Enforces security requirements for pods deployed by `teleport-kube-agent`.                                                                                                                                                                                                                              | `podSecurityPolicy.enabled` is `true` and the Kubernetes cluster version is < 1.23.                               |
-| `RoleBinding`         | The release name, suffixed by `-psp`                                     | Enforces security requirements for pods deployed by `teleport-kube-agent`.                                                                                                                                                                                                                              | `podSecurityPolicy.enabled` is `true` and the Kubernetes cluster version is < 1.23.                               |
+| Kind                  | Default Name                                                                           | Description                                                                                                                                                                                                                                                                                                 | When Deployed                                                                                                     |
+|-----------------------|----------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|
+| `StatefulSet`         | The release name                                                                       | Running a user-configured Teleport pod.                                                                                                                                                                                                                                                                     | Always.                                                                                                           |
+| `Secret`              | `joinTokenSecret.name` (default: `teleport-kube-agent-join-token`)                     | Used for managing the state of the Teleport pod.                                                                                                                                                                                                                                                            | `joinTokenSecret.secret` is `true`.                                                                               |
+| `Secret`              | `jamfCredentialsSecret.name` (default: `teleport-jamf-api-credentials`)                | Used for integrating Jamf Prod with Teleport (`jamf_service`).                                                                                                                                                                                                                                              | `jamfCredentialsSecret.create` is `true`                                                                          |
+| `Deployment`          | The release name                                                                       | Runs a user-configured Teleport pod.                                                                                                                                                                                                                                                                        | `storage.enabled` is `false` and the chart is being upgraded. Fresh installs will deploy a `StatefulSet` instead. |
+| `Role`                | `rbac.roleName`, if given, or the release name                                         | Used to manage the state of the Teleport pod via Kubernetes secrets.                                                                                                                                                                                                                                        | Always.                                                                                                           |
+| `RoleBinding`         | `rbac.roleBindingName`, if given, or the release name                                  | Enables the Teleport pod to manage it's own state via Kubernetes secrets.                                                                                                                                                                                                                                   | Always.                                                                                                           |
+| `ClusterRole`         | `rbac.clusterRoleName`, if given, or the release name                                  | Allows impersonating users, groups, and service accounts, getting pods, and creating [`SelfSubjectAccessReview`s](https://kubernetes.io/docs/reference/kubernetes-api/authorization-resources/self-subject-access-review-v1/) so the Teleport pod can manage access to resources in its Kubernetes cluster. | Always.                                                                                                           |
+| `ClusterRoleBinding`  | `rbac.clusterRoleBindingName`, if given, or the release name                           | Enables the Teleport pod to impersonate users, groups to manage access to resources in the Kubernetes cluster.                                                                                                                                                                                              | Always.                                                                                                           |
+| `ClusterRole`         | `rbac.adminClusterRoleName`, if given, or the release name suffixed by `-admin`        | Allows full access to manage access to resources in its Kubernetes cluster.                                                                                                                                                                                                                                 | Always.                                                                                                           |
+| `ClusterRoleBinding`  | `rbac.adminClusterRoleBindingName`, if given, or the release name suffixed by `-admin` | Target of impersonation. Enables the Teleport pod to manage access to resources in the Kubernetes cluster.                                                                                                                                                                                                  | Always.                                                                                                           |
+| `ServiceAccount`      | `serviceAccount.name`, if given, or the release name                                   | Enables the Teleport pod to manage it's own state and access to Kubernetes resources.                                                                                                                                                                                                                       | `serviceAccount.create` is `true`                                                                                 |
+| `PodDisruptionBudget` | The release name                                                                       | Ensure high availability for the Teleport pod.                                                                                                                                                                                                                                                              | `highAvailability.podDisruptionBudget.enabled` is `true`.                                                         |
+| `ServiceAccount`      | The release name, suffixed by `-hook`                                                  | Used to delete legacy `Deployment`s in order to deploy a `StatefulSet` instead. Removed once the upgrade is complete.                                                                                                                                                                                       | If the `teleport-kube-agent` release contains a legacy `Deployment` resource.                                     |
+| `Role`                | The release name, suffixed by `-hook`                                                  | Used to delete legacy `Deployment`s in order to deploy a `StatefulSet` instead. Removed once the upgrade is complete.                                                                                                                                                                                       | If the `teleport-kube-agent` release contains a legacy `Deployment` resource.                                     |
+| `RoleBinding`         | The release name, suffixed by `-hook`                                                  | Used to delete legacy `Deployment`s in order to deploy a `StatefulSet` instead. Removed once the upgrade is complete.                                                                                                                                                                                       | If the `teleport-kube-agent` release contains a legacy `Deployment` resource.                                     |
+| `Job`                 | The release name, suffixed by `-hook`                                                  | Used to delete legacy `Deployment`s in order to deploy a `StatefulSet` instead. Removed once the upgrade is complete.                                                                                                                                                                                       | If the `teleport-kube-agent` release contains a legacy `Deployment` resource.                                     |
+| `ConfigMap`           | The release name                                                                       | Contains the configuration for the Teleport pod.                                                                                                                                                                                                                                                            | Always.                                                                                                           |
+| `PodSecurityPolicy`   | The release name                                                                       | Enforces security requirements for pods deployed by `teleport-kube-agent`.                                                                                                                                                                                                                                  | `podSecurityPolicy.enabled` is `true` and the Kubernetes cluster version is < 1.23.                               |
+| `Role`                | The release name, suffixed by `-psp`                                                   | Enforces security requirements for pods deployed by `teleport-kube-agent`.                                                                                                                                                                                                                                  | `podSecurityPolicy.enabled` is `true` and the Kubernetes cluster version is < 1.23.                               |
+| `RoleBinding`         | The release name, suffixed by `-psp`                                                   | Enforces security requirements for pods deployed by `teleport-kube-agent`.                                                                                                                                                                                                                                  | `podSecurityPolicy.enabled` is `true` and the Kubernetes cluster version is < 1.23.                               |
 
 (!docs/pages/includes/helm-reference/zz_generated.teleport-kube-agent.mdx!)
