docs: update db session recordings desc

--- a/docs/pages/includes/database-access/db-audit-events.mdx
+++ b/docs/pages/includes/database-access/db-audit-events.mdx
@@ -35,5 +35,5 @@ $ tsh play --format json 307b49d6-56c7-4d20-8cf0-5bc5348a7101
     }
 ```
 
-The audit log is viewable under **Audit** in the left-hand pane via the Web UI for users with permission to the `event` resources. Database sessions do not appear
-in the session recordings page.
+The audit log is viewable under **Audit** in the left-hand pane via the Web UI for users with permission to the `event` resources. Database sessions appear
+in the session recordings page with limited types available for replay in the Web UI.
