--- a/docs/pages/admin-guides/access-controls/guides/impersonation.mdx
+++ b/docs/pages/admin-guides/access-controls/guides/impersonation.mdx
@@ -14,6 +14,16 @@ users and robots to create short-lived certs for other users and roles.
 Let's explore how interactive user Alice can create credentials for a
 non-interactive CI/CD user Jenkins and a security scanner.
 
+## How it works
+
+A Teleport role allows a Teleport user to impersonate other roles or users. When
+a Teleport user authenticates with a role that allows impersonation, they can
+execute the `tctl auth sign` command to instruct the Teleport Auth Service to
+sign a certificate for another Teleport user. As with all Teleport user
+certificates, the certificate written by `tctl auth sign` includes the names of
+a Teleport user and that user's roles. TLS or SSH clients can then load the
+certificate in order to authenticate to Teleport as the impersonated user.
+
 ## Prerequisites
 
 (!docs/pages/includes/edition-prereqs-tabs.mdx!)
