--- a/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/azure.mdx
+++ b/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/azure.mdx
@@ -20,6 +20,22 @@ cluster to Teleport.
 
 (!docs/pages/includes/cloud/call-to-action.mdx!)
 
+## How it works
+
+The `teleport-cluster` Helm chart deploys the Teleport Auth Service and Teleport
+Proxy Service on your Azure Kubernetes Service cluster. The chart requires the
+following resources, which we show you how to create in this guide:
+
+- **IAM permissions for the Teleport Auth Service**. The Auth Service requires
+  permissions to manage resources on its backend. 
+- **cert-manager** for obtaining and renewing TLS credentials that the Proxy
+  Service uses to run its HTTPS server.
+- **IAM permissions for cert-manager**. In the setup we show in this guide,
+  `cert-manager` modifies DNS records to demonstrate domain ownership and
+  receive TLS credentials from Let's Encrypt. To do so, the Proxy Service
+  completes the [ACME DNS-01
+  challenge](https://letsencrypt.org/docs/challenge-types/#dns-01-challenge).
+
 ## Prerequisites
 
 (!docs/pages/includes/kubernetes-access/helm/teleport-cluster-prereqs.mdx!)
