--- a/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/custom.mdx
+++ b/docs/pages/admin-guides/deploy-a-cluster/helm-deployments/custom.mdx
@@ -21,6 +21,15 @@ existing Teleport deployment to access your Kubernetes cluster. [Follow our
 guide](../../../enroll-resources/kubernetes-access/getting-started.mdx) to connect your Kubernetes
 cluster to Teleport.
 
+## How it works
+
+The `teleport-cluster` Helm chart deploys the Teleport Auth Service and Proxy
+Service. You can modify the chart's values file to include a custom
+configuration for each service. The Helm chart applies Auth Service and Proxy
+Service configurations to their respective pods, which load each configuration
+as a ConfigMap. The chart applies Teleport-recommended defaults for any field
+not included in your custom configurations.
+
 ## Prerequisites
 
 (!docs/pages/includes/kubernetes-access/helm/teleport-cluster-prereqs.mdx!)
