--- a/docs/pages/reference/terraform-provider/resources/database.mdx
+++ b/docs/pages/reference/terraform-provider/resources/database.mdx
@@ -244,7 +244,7 @@ Optional:
 
 - `cluster_id` (String) ClusterID is the ID of the cluster. Required only for AlloyDB databases.
 - `instance_id` (String) InstanceID is the Cloud SQL instance ID.
-- `is_alloy_db` (Boolean) IsAlloyDB is true if the database is an AlloyDB server.
+- `is_alloydb` (Boolean) IsAlloyDB is true if the database is an AlloyDB server.
 - `project_id` (String) ProjectID is the GCP project ID the Cloud SQL instance resides in.
 - `region` (String) Region is the GCP region. Required only for AlloyDB databases.
 
