Better godocs, more URL test cases, fixed user facing errors

--- a/docs/pages/reference/cli/tctl.mdx
+++ b/docs/pages/reference/cli/tctl.mdx
@@ -1873,7 +1873,7 @@ When no endpoint is specified, `tctl top` will attempt to connect via the debug 
 $ sudo teleport start --diag-addr=127.0.0.1:3000
 # View stats with a refresh period of 5 seconds
 $ tctl top http://127.0.0.1:3000 5s
-# Use configured defaults for local node
+# Use configured defaults
 $ tctl top
 ```
 
