--- a/docs/pages/admin-guides/access-controls/login-rules/guide.mdx
+++ b/docs/pages/admin-guides/access-controls/login-rules/guide.mdx
@@ -6,8 +6,23 @@ labels:
  - zero-trust
 ---
 
-This guide will walk you through the process of writing, testing, and adding the
-first Login Rule to your Teleport cluster.
+Login Rules define logic that transforms the external traits of a user who signs
+into Teleport, providing consistent access control policies for users in your
+cluster. This guide walks you through the process of writing, testing, and
+adding the first Login Rule to your Teleport cluster. 
+
+## How it works
+
+A Login Rule is a dynamic Teleport resource stored on the Auth Service backend.
+When a user authenticates to Teleport through an identity provider (IdP),
+Teleport populates the user's **external traits** based on data from the IdP.
+Login Rules define logic for manipulating a user's external traits. When a user
+signs into Teleport, the Teleport Auth Service executes Login Rules in order of
+priority. After executing all Login Rules the Auth Service encodes the final set
+of external traits in the certificates that it issues to the user.
+
+For more information about configuring Login Rules, see the [Login Rules
+Reference](../../../reference/access-controls/login-rules.mdx).
 
 ## Prerequisites
 
