--- a/docs/pages/upcoming-releases.mdx
+++ b/docs/pages/upcoming-releases.mdx
@@ -26,6 +26,16 @@ We continue to support the following major versions of Teleport:
 
 ### 18.1.0
 
+#### MCP servers access
+
+Teleport will provide ability to connect to stdio-based MCP servers with
+connection proxying and audit logging support.
+
+#### MCP for database access
+
+Teleport will allow MCP clients such as Claude Desktop to execute queries
+in Teleport-protected databases.
+
 #### Encrypted session recordings
 
 Teleport will provide the ability to integrate with Hardware Security Modules
