Push encrypted session recordings to 18.2

--- a/docs/pages/upcoming-releases.mdx
+++ b/docs/pages/upcoming-releases.mdx
@@ -15,6 +15,7 @@ We plan to release the following versions in the coming months:
 | Version | Date                   |
 |---------|------------------------|
 | 18.1.0  | Week of August 4, 2025 |
+| 18.2.0  | Week of September 8, 2025 |
 
 We continue to support the following major versions of Teleport:
 
@@ -35,11 +36,6 @@ connection proxying and audit logging support.
 
 Teleport will allow MCP clients such as Claude Desktop to execute queries
 in Teleport-protected databases.
-
-#### Encrypted session recordings
-
-Teleport will provide the ability to integrate with Hardware Security Modules
-(HSMs) in order to encrypt session recordings prior to uploading them to storage.
 
 #### VNet for SSH
 
@@ -69,6 +65,13 @@ entitlement groups with Teleport access lists.
 
 Teleport web UI will make a better distinction between just-in-time and long-term
 access request UX.
+
+### 18.2.0
+
+#### Encrypted session recordings
+
+Teleport will provide the ability to integrate with Hardware Security Modules
+(HSMs) in order to encrypt session recordings prior to uploading them to storage.
 
 ## Teleport Cloud
 
