--- a/docs/pages/upcoming-releases.mdx
+++ b/docs/pages/upcoming-releases.mdx
@@ -14,7 +14,8 @@ We plan to release the following versions in the coming months:
 
 | Version | Date                   |
 |---------|------------------------|
-| 18.1.0  | Week of August 4, 2025 |
+| 18.1.0  | Week of July 21, 2025 |
+| 18.2.0  | Week of September 1, 2025 |
 
 We continue to support the following major versions of Teleport:
 
@@ -26,10 +27,15 @@ We continue to support the following major versions of Teleport:
 
 ### 18.1.0
 
-#### Encrypted session recordings
+#### MCP servers access
 
-Teleport will provide the ability to integrate with Hardware Security Modules
-(HSMs) in order to encrypt session recordings prior to uploading them to storage.
+Teleport will provide ability to connect to stdio-based MCP servers with
+connection proxying and audit logging support.
+
+#### MCP for database access
+
+Teleport will allow MCP clients such as Claude Desktop to execute queries
+in Teleport-protected databases.
 
 #### VNet for SSH
 
@@ -59,6 +65,13 @@ entitlement groups with Teleport access lists.
 
 Teleport web UI will make a better distinction between just-in-time and long-term
 access request UX.
+
+### 18.2.0
+
+#### Encrypted session recordings
+
+Teleport will provide the ability to integrate with Hardware Security Modules
+(HSMs) in order to encrypt session recordings prior to uploading them to storage.
 
 ## Teleport Cloud
 
