add demo screenshot and a few other comments

--- a/docs/pages/enroll-resources/mcp-access/getting-started.mdx
+++ b/docs/pages/enroll-resources/mcp-access/getting-started.mdx
@@ -117,8 +117,13 @@ In addition, you can use --client-config=<path> to specify a config file locatio
 For example, you can update a Cursor project using --client-config=<path-to-project>/.cursor/mcp.json
 ```
 
-Once your MCP client configuration is updated, you will find
-the Teleport demo MCP server in your MCP client.
+Once your MCP client configuration is updated, you will find the Teleport demo
+MCP server in your MCP client. The demo MCP server consists of several tools
+that provide basic information on this demo, your Teleport user, and the MCP
+session. You can interact with it using sample questions like "can you show some
+details on this teleport demo?":
+
+![Demo Server Claude Desktop](../../../img/mcp-access/demo-server-claude-desktop.png)
 
 ## Next Steps
 
