--- a/docs/pages/enroll-resources/mcp-access/mcp-access.mdx
+++ b/docs/pages/enroll-resources/mcp-access/mcp-access.mdx
@@ -8,14 +8,9 @@ servers while improving both access control and visibility.
 
 ![Architecture diagram for enrolling MCP servers with Teleport](../../../img/mcp-access/architecture-stdio.svg)
 
-Teleport protects MCP servers through the Teleport Application Service, which is
-a Teleport Agent service. For more information on agent services, read [Teleport
-Agent Architecture](../../reference/architecture/agents.mdx). You can also learn
-how to deploy a [pool of Teleport Agents](../agents/agents.mdx) to run multiple
-agent services.
 
 ## Getting started
-- [Protect a MCP Server with Teleport](./getting-started.mdx): Provides instructions to set up a Teleport Service and enable secure access to a MCP server.
+- [Quick-start with demo MCP server](./getting-started.mdx): Provides instructions to set up a Teleport Service and enable secure access to a demo MCP server.
 
 ## Guides
 - [MCP Access with Stdio MCP Server](./stdio.mdx): Set up a Teleport Service and enable secure access to a MCP server with stdio transport.
