add dynamic registration;

--- a/docs/pages/enroll-resources/mcp-access/mcp-access.mdx
+++ b/docs/pages/enroll-resources/mcp-access/mcp-access.mdx
@@ -18,6 +18,7 @@ servers while improving both access control and visibility.
 
 ## Configuration & management
 - [MCP Access Controls](./rbac.mdx): Role-Based Access Control (RBAC) for Teleport MCP access.
+- [Dynamic MCP Server Registration](./dynamic-registration.mdx)
 
 ## Troubleshooting & support
 - [Troubleshooting MCP Access](./troubleshooting.mdx): Describes common issues and solutions for access to MCP servers.
