--- a/docs/pages/enroll-resources/mcp-access/stdio.mdx
+++ b/docs/pages/enroll-resources/mcp-access/stdio.mdx
@@ -166,5 +166,6 @@ Once your MCP client configuration is updated, you will see
 
 Learn more about protecting MCP servers with Teleport in the following topics:
 
-- [MCP Access Control](rbac.mdx).
+- [MCP Access Control](./rbac.mdx).
+- [Register MCP servers dynamically](./dynamic-registration.mdx)
 - Configuration and CLI [reference](../../reference/agent-services/mcp-access.mdx).
