--- a/docs/pages/enroll-resources/application-access/guides/dynamic-registration.mdx
+++ b/docs/pages/enroll-resources/application-access/guides/dynamic-registration.mdx
@@ -18,44 +18,11 @@ applications](../../auto-discovery/kubernetes-applications/kubernetes-applicatio
 
 ## Required permissions
 
-In order to interact with dynamically registered applications, a user must have
-a Teleport role with permissions to manage `app` resources. 
-
-In the following example, a role allows a user to perform all possible
-operations against `app` resources:
-
-```yaml
-allow:
-  rules:
-    - resources:
-        - app
-      verbs: [list, create, read, update, delete]
-```
+(!docs/pages/includes/application-access/dynamic-app-permissions.mdx!)
 
 ## Enabling dynamic registration
 
-To enable dynamic registration, include a `resources` section in your Application
-Service configuration with a list of resource label selectors you'd like this
-service to monitor for registering:
-
-```yaml
-app_service:
-  enabled: true
-  resources:
-  - labels:
-      "*": "*"
-```
-
-You can use a wildcard selector to register all dynamic app resources in the cluster
-on the Application Service or provide a specific set of labels for a subset:
-
-```yaml
-resources:
-- labels:
-    "env": "prod"
-- labels:
-    "env": "test"
-```
+(!docs/pages/includes/application-access/dynamic-app-config.mdx!)
 
 ## Creating an app resource
 
